<resources>
    <string name="app_name">Unshaky</string>
    <string name="test"> Harry Potter is a series of fantasy novels written by British author J. K. Rowling. The novels chronicle the life of a young wizard, Harry Potter,\n
                         and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns\n
                         Harrys struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic,\n
                         and subjugate all wizards and muggles, a reference term that means non-magical people\n </string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string-array name="screen_array">
        <item>Recent books</item>
        <item>SD card</item>
    </string-array>
    <string name="recent_books">Recent books</string>
    <string name="sd_browse">SD card</string>
    <string name="book_uri">book_uri</string>
    <string name="arguments">arguments</string>
    <string name="pref_velocity_ampl">Velocity Amplification</string>
    <string name="pref_velocity_ampl_sum">Proportional coefficient of velocity for calculating position</string>
    <string name="pref_velocity_ampl_def">10000</string>
    <string name="pref_velocity_fric">Velocity Friction</string>
    <string name="pref_velocity_fric_sum">Resistance of velocity to to changed caused by acceleration</string>
    <string name="pref_velocity_fric_def">0.2</string>
    <string name="pref_position_ampl">Position Friction</string>
    <string name="pref_position_ampl_sum">Resistance of postition to changed caused by velocity</string>
    <string name="pref_position_ampl_def">0.1</string>
    <string name="saved_books_uris">saved_books_uris</string>
    <string name="model_type">model_type</string>
    <string name="spring_dumper">Spring-dumper</string>
    <string name="hidden_markov_model">Hidden Markov Model</string>
</resources>
